--- a/web/webform/package.json
+++ b/web/webform/package.json
@@ -24,7 +24,9 @@
     "@angular/router": "^6.1.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "npm": "^6.4.0",
     "rxjs": "^6.0.0",
+    "tinymce": "^4.8.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
