--- a/web/NodeJS/node/package.json
+++ b/web/NodeJS/node/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "moment": "^2.22.2",
     "mongoose": "^5.2.6",
     "morgan": "^1.9.0",
+    "multer": "^1.3.1",
     "nodemon": "^1.18.3",
+    "npm": "^6.4.1",
+    "randomstring": "^1.1.5",
     "socket.io": "^2.1.1"
   }
 }
