--- a/web/webform/package.json
+++ b/web/webform/package.json
@@ -22,11 +22,13 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "angular-base64": "^2.0.5",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "ng2-file-upload": "^1.3.0",
     "npm": "^6.4.0",
     "rxjs": "^6.0.0",
-    "tinymce": "^4.8.2",
+    "tinymce": "^4.5.9",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
